Update docs/schema for Coverage.scheduled
