# server/planning/static/swagger.yaml
@@ -103,7 +103,7 @@ paths:
                   _items:
                     type: array
                     items:
-                      $ref: '#/components/schemas/ContentAPIPlanningResource'
+                      $ref: '#/components/schemas/ContentAPIPlanningResponse'
                   _meta:
                     type: object
                     properties:
@@ -127,7 +127,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ContentAPIPlanningResource'
+                $ref: '#/components/schemas/ContentAPIPlanningResponse'
 components:
   parameters:
     start_date:
@@ -284,7 +284,7 @@ components:
       - name
       title: AgendaItem
       type: object
-    ContentAPICoveragePlanning:
+    ContentAPICoveragePlanningResponse:
       properties:
         ednote:
           title: Ednote
@@ -321,11 +321,23 @@ components:
           type: integer
         scheduled:
           title: Scheduled
-          format: date-time
+          anyOf:
+          - pattern: ^\d{4}-\d{2}-\d{2}$
+            title: Date
+          - pattern: ^\d{4}-\d{2}-\d{2}(T\d{2}:\d{2}:\d{2}(\.\d+)?)$
+            title: Date and time
+          - pattern: ^\d{4}-\d{2}-\d{2}(T\d{2}:\d{2}:\d{2}(\.\d+)?(Z|[+-]\d{2}(:?\d{2})?)?)?$
+            title: Date, time and UTC offset
+          examples:
+          - '2025-07-21'
+          - '2025-07-21T10:30:00'
+          - '2025-07-21T10:30:00Z'
+          - 2025-07-21T10:30:00+1100
+          - '2025-07-21T10:30:00+11:00'
           type: string
-      title: ContentAPICoveragePlanning
+      title: ContentAPICoveragePlanningResponse
       type: object
-    ContentAPICoverageResource:
+    ContentAPICoverageResponse:
       properties:
         coverage_id:
           title: Coverage Id
@@ -345,10 +357,10 @@ components:
             $ref: '#/components/schemas/CoverageDelivery'
           type: array
         planning:
-          $ref: '#/components/schemas/ContentAPICoveragePlanning'
+          $ref: '#/components/schemas/ContentAPICoveragePlanningResponse'
       required:
       - coverage_id
-      title: ContentAPICoverageResource
+      title: ContentAPICoverageResponse
       type: object
     CoverageAssignedDesk:
       properties:
@@ -561,7 +573,7 @@ components:
       - name
       title: Subject
       type: object
-    ContentAPIPlanningResource:
+    ContentAPIPlanningResponse:
       properties:
         _id:
           title: Id
@@ -663,7 +675,7 @@ components:
           type: array
         coverages:
           items:
-            $ref: '#/components/schemas/ContentAPICoverageResource'
+            $ref: '#/components/schemas/ContentAPICoverageResponse'
           title: Coverages
           type: array
       required:
